--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/bottom-tabs": "^5.0.7",
     "@react-navigation/native": "^5.0.6",
-    "@react-navigation/stack": "^5.0.6",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-icons": "^3.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-qrcode-svg": "^6.0.3",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "^11.0.1",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.0.1"
   },
